updatet gitignore and requrements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 SpeechRecognition
 pyttsx3
 pyaudio
-llama-cpp-python==0.1.39
+#llama-cpp-python
 customtkinter
-python-dotenv
 argparse
 python-dotenv
 openai
