--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ customtkinter
 argparse
 python-dotenv
 openai
+pvporcupine
 # install this
 # pip install git+https://github.com/openai/whisper.git soundfile
